# MacDockFinder

./: AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
docs/plans/: 2026-05-24-macdockfinder-p1-dock.md  2026-05-24-macdockfinder-p2-tray.md  2026-05-24-macdockfinder-p3-menubar.md
docs/specs/: 2026-05-24-macdockfinder-design.md  2026-05-24-macdockfinder-p2-tray.md  2026-05-24-macdockfinder-p3-menubar.md
scripts/: build-windows.sh
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: dock.rs  menubar.rs  mod.rs  settings.rs  tray.rs
src-tauri/src/config/: store.rs
src-tauri/src/monitor/: events.rs  mod.rs  process.rs
src/lib/components/: AppIndicator.svelte  BatteryWidget.svelte  ContextMenu.svelte  DateTimeWidget.svelte  DockBar.svelte  DockDivider.svelte  DockItem.svelte  MenuBar.svelte  NotificationBell.svelte  NotificationPanel.svelte  SearchButton.svelte  SearchOverlay.svelte  TrashBin.svelte  VolumeWidget.svelte  WifiWidget.svelte
src/lib/stores/: dock.ts  menubar.ts  settings.ts
src/lib/utils/: animation.ts  ipc.ts
